# mcpe-minigame

./: .gitignore  CMakeLists.txt  androidToolchain.cmake
server_behaviour_pack/loot_tables/minigames/: skywars_chest.json
src/: MinigameDimension.cpp  MinigameDimension.h  main.cpp  main.h  patchhook.h  statichook.h
src/lobby/: LobbyManager.cpp  LobbyManager.h  NoSavePlayersPatch.cpp
src/minigame/: EmptyWorldGenerator.cpp  EmptyWorldGenerator.h  FakeNetherDimension.cpp  FakeNetherDimension.h  MapConfig.cpp  MapConfig.h  Minigame.cpp  Minigame.h  MinigameChatHooks.cpp  MinigameCommands.cpp  MinigameDimension.cpp  MinigameDimension.h  MinigameManager.cpp  MinigameManager.h  MinigamePlayerHooks.cpp  MinigamePortalHook.cpp
src/minigame/commands/: CreateMinigameCommand.cpp  CreateMinigameCommand.h  ForceStartMinigameCommand.cpp  ForceStartMinigameCommand.h  JoinMinigameCommand.cpp  JoinMinigameCommand.h  MinigameCommandHelper.h  ReturnToLobbyCommand.cpp  ReturnToLobbyCommand.h
src/minigame/skywars/: SkyWarsMinigame.h
src/util/: Log.cpp  PlayerData.h  PlayerHelper.cpp  PlayerHelper.h  PlayerPosLimitHelper.cpp  PlayerPosLimitHelper.h
